<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/buttons_layout" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1EEEE"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_CE"
                style="@style/buttonOperator"
                android:text="@string/clearEntry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_C"
                style="@style/buttonOperator"
                android:text="@string/clear" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_BS"
                style="@style/buttonOperator"
                android:text="@string/backspace" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/buttonOperator"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/buttonNumber"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/buttonNumber"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/buttonNumber"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/buttonOperator"
                android:text="@string/multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/buttonNumber"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/buttonNumber"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/buttonNumber"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/buttonOperator"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/buttonNumber"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/buttonNumber"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/buttonNumber"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/buttonOperator"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_skip"
                style="@style/buttonOperator"
                android:text="@string/skip" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/buttonNumber"
                android:text="@string/_zero"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/buttonOperator"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                style="@style/buttonOperator"
                android:text="@string/equals" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>